docs(openspec): plan pre-G2 technical foundation
Why: Record G1 approval and turn the agreed state, dependency, smoke, and progressive-disclosure decisions into one lean execution path.

What: Add KStateMachine, compatible upgrade, warning cleanup, smoke-test, generated-resource, and G2 follow-on tasks; update affected specs and gate records.